--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 
 }
 .paragra{
-background-color:green;
 font-size: 40px;
 font-weight: 700;
 margin-top: 0px;
@@ -44,6 +43,10 @@ width:150px;
   padding: 12px;
   margin: 10px;
 }
+.form input {
+  font-size:20px;
+
+}
 .p p {
   
   margin-top: 10px;
@@ -67,7 +70,6 @@ width:150px;
   
 }
 .row {
-  background-color: black;
   display: flex;
   flex-wrap: wrap;
 }
