--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-}
+
 section {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -84,7 +83,7 @@ h3 {
   font-weight: 600;
   line-height: 1.5;
 }
-.btn_container{
+.btn_container {
   width: 100%;
   display: flex;
   align-items: center;
@@ -150,13 +149,21 @@ a {
   align-items: center;
   justify-content: center;
 }
-.row_form {
+.abc {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
-.mail {
+.row_form {
+  margin-left: 150px;
+}
+.E-mail {
   display: inline-block;
+  width: 430px;
 }
 .seuNone {
   display: inline-block;
+  width: 320px;
 }
 .paragra {
   font-size: 40px;
@@ -165,7 +172,6 @@ a {
 }
 .form button {
   font-size: 20px;
-  background: #424242;
   font-family: "Montserrat";
   font-weight: 700;
   text-align: center;
@@ -176,12 +182,10 @@ a {
   border-radius: 60px;
   padding: 7px;
   width: 150px;
+  cursor: pointer;
 }
-.mail {
-  margin: 50px;
-}
+
 .form input {
-  width: 320px;
   padding: 12px;
   margin: 10px;
   font-size: 16px;
@@ -236,7 +240,6 @@ ul {
   justify-content: center;
   margin-bottom: 2rem;
   margin: auto;
-  margin-top: ;
 }
 .socialLinks a {
   margin: 8px;
